# minclient

./: .gitignore  CMakeLists.txt  CTextParser.cpp  CTextParser.h  CTexture.cpp  CTexture.h  CTextureGL.cpp  CTextureGL.h  CVector2.cpp  CVector2.h  CVector3.cpp  CVector3.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Font.cpp  Font.h  ForceInline.h  MinClient.cpp  MinClient.h  MinClient.sln  MinClient.vcxproj  MinClient.vcxproj.filters  NetworkStuff.cpp  NetworkStuff.h  OpenGLES2stuff.cpp  OpenGLES2stuff.h  OpenGLstuff.cpp  OpenGLstuff.h  SDLstuff.cpp  SDLstuff.h  license.txt  m.bat
Data/: Font.tga  qwrt.cfg
doc/: minclient.docx
lz4-r123/: .lz4.h.swp
windows/SDL/: SDL_cpuinfo.h
